completé body con otro section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur iusto soluta amet fugit! Impedit, corporis! Aperiam rem qui facere voluptate iure, tempore illum illo, 
                 quos, maiores ab totam a doloremque?</p>
         </section>
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium aliquid rem perferendis molestiae assumenda aliquam laborum nemo? Dignissimos, dolore enim consequuntur quibusdam dolor,
+                 eveniet velit doloremque dolorum sed totam adipisci?</p>
+        </section>
       </main>
     </header>
 
